# rocket-opentelemetry-demo

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  opentelemetry.rs  propagation.rs  tracing_fairing.rs
